fix anchor contrast for theming

--- a/packages/dnb-eufemia/src/elements/anchor/style/themes/dnb-anchor-theme-ui.scss
+++ b/packages/dnb-eufemia/src/elements/anchor/style/themes/dnb-anchor-theme-ui.scss
@@ -1,3 +1,5 @@
+@use '../anchor-mixins.scss';
+
 .dnb-anchor {
   color: var(--color-sea-green);
 
@@ -34,4 +36,10 @@
   &:not(:active) {
     color: var(--color-sea-green);
   }
+}
+
+// Load anchor contrast again here, so that the green color set in color: var(--color-sea-green);
+// does not override the .dnb-anchor-contrast set in dnb-anchor.scss
+.dnb-anchor--contrast {
+  @include anchor-mixins.useAnchorContrastStyle();
 }
